--- a/gabung/v3.html
+++ b/gabung/v3.html
@@ -11,33 +11,9 @@
   h2 { font-size:1.2rem; margin-bottom:10px; }
   textarea, select { width:100%; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; resize:vertical; }
   textarea { height:150px; }
-  #output { display:none; margin-top:10px; background:#fff; border-radius:8px; border:1px solid #ffd42a; padding:10px 15px; box-shadow:0 0 8px rgba(255,212,42,0.2);}
-  .link-item {
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    background:#fffbec;
-    padding:8px 10px;
-    border-bottom:1px dashed #ffd42a;
-    border-radius:5px;
-    margin-bottom:6px;
-  }
-  .link-item a.link {
-    color:#0066cc;
-    text-decoration:none;
-    word-break:break-all;
-    flex:1;
-  }
-  .link-item a.link:hover { text-decoration:underline; }
-  .link-item a.report {
-    color:#cc0000;
-    text-decoration:none;
-    font-weight:bold;
-    margin-left:10px;
-    white-space:nowrap;
-  }
-  .link-item a.report:hover { text-decoration:underline; }
-
+  #output { display:none; margin-top:10px; }
+  #output a { display:inline-block; margin-bottom:6px; color:#0066cc; text-decoration:none; word-wrap:break-word; }
+  #output a:hover { text-decoration:underline; }
   .pagination { margin-top:15px; text-align:center; display:flex; flex-wrap:wrap; gap:6px; justify-content:center; }
   .page-btn { padding:10px 14px; cursor:pointer; border:1px solid #ccc; border-radius:6px; background-color:white; font-size:1rem; min-width:40px; }
   .page-btn:hover { background-color:#ffd42a; color:#b36b00; }
@@ -68,7 +44,7 @@
 </head>
 <body>
 
-<h1>Produk Live MadGazan 5 Oktober</h1>
+<h1>Produk Live MadGazan</h1>
 <h2>Manajemen Shopee Live v3</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
@@ -85,16 +61,17 @@
   <option value="">-- Pilih File TXT --</option>
   <option value="jalb.txt">jalb.txt</option>
   <option value="rano.txt">rano.txt</option>
-  <option value="indah.txt">kakfitro.txt</option>
+  <option value="indah.txt">indah.txt</option>
   <option value="rini.txt">rini.txt</option>
   <option value="nurbad.txt">nurbad.txt</option>
 </select>
+
 <div class="input-buttons">
-  <button id="ambilFileListLinksBtn">Download Terbaru Masal</button>
+  <button id="ambilFileListLinksBtn">📥 Download Terbaru Masal</button>
 </div>
 
 <div class="sponsor">
-  Disponsori oleh <strong>MadGazan Studio</strong><br>
+  Disponsori oleh <strong>MadGazan Studio</strong>
 </div>
 
 <div id="stats"></div>
@@ -113,7 +90,6 @@
     <button onclick="importLocalStorage()">Import Data</button>
   </div>
   <button style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;" onclick="resetLocalStorage()">❌ Hapus Semua Data LocalStorage</button>
-  <button id="syncAllBtn" style="margin-top:15px; background:#d0ffd0; border-color:#00aa00;">🔄 Singkron Semua File TXT</button>
 </div>
 
 <footer>
@@ -186,6 +162,8 @@ document.getElementById('hapusDuplikatBtn').addEventListener('click', () => {
   saveAppData();
   alert('Duplikat dihapus!');
 });
+
+/* === FUNGSI: SORTIR BERDASARKAN TOKO === */
 document.getElementById('sortirPerTokoBtn').addEventListener('click', () => {
   const lines = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
   const tokoMap = new Map();
@@ -203,6 +181,7 @@ document.getElementById('sortirPerTokoBtn').addEventListener('click', () => {
   alert(`Sortir selesai!\nTotal toko unik: ${hasil.length}`);
 });
 
+/* === PEMROSESAN & PAGINASI === */
 function processLinks() {
   const raw = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
   const unique = [...new Set(raw)];
@@ -215,28 +194,22 @@ function processLinks() {
   renderStats(raw.length, unique.length, dup);
   renderPagination();
 }
-
 function renderStats(total, uniq, dup) {
-  statsEl.textContent =
-    `Total link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
+  statsEl.textContent = `Total link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
 }
-
 function showPage(page) {
   if (!allPages.length) { outputEl.style.display = 'none'; return; }
   currentPage = page;
   const fileNow = dropdownEl.value || 'default.txt';
   outputEl.innerHTML = allPages[page - 1].map(l => {
     const reportUrl = `https://niddumulu.github.io/shope-tools/lapor/index.html?link=${encodeURIComponent(l)}&file=${encodeURIComponent(fileNow)}`;
-    return `<div class="link-item">
-              <a class="link" href="${l}" target="_blank">${l}</a>
-              <a class="report" href="${reportUrl}" target="_blank">Laporkan</a>
-            </div>`;
+    return `<div><a href="${l}" target="_blank">${l}</a> 
+            <a href="${reportUrl}" target="_blank" style="color:red; margin-left:6px;">| Laporkan</a></div>`;
   }).join('');
   outputEl.style.display = 'block';
   highlightActivePage();
   saveAppData();
 }
-
 function renderPagination() {
   paginationEl.innerHTML = '';
   for (let i = 1; i <= allPages.length; i++) {
@@ -259,72 +232,77 @@ function copyToClipboard() {
   navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
 }
 
-/* === ✅ FUNGSI-FUNGSI BACKUP, IMPORT, RESET, SINKRONISASI === */
-
-// Backup semua data localStorage ke file JSON
+/* === BACKUP & IMPORT === */
 function exportLocalStorage() {
-  const allData = {};
+  const data = {};
   for (let i = 0; i < localStorage.length; i++) {
     const key = localStorage.key(i);
-    allData[key] = localStorage.getItem(key);
+    data[key] = localStorage.getItem(key);
   }
-  const blob = new Blob([JSON.stringify(allData, null, 2)], { type: 'application/json' });
+  const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
   const url = URL.createObjectURL(blob);
   const a = document.createElement('a');
   a.href = url;
   a.download = 'madgazan_backup.json';
   a.click();
   URL.revokeObjectURL(url);
-  alert('✅ Backup berhasil diunduh!');
+  alert('✅ Data berhasil disimpan ke file madgazan_backup.json');
 }
-
-// Import file JSON hasil backup ke localStorage
 function importLocalStorage() {
   const fileInput = document.getElementById('importFile');
-  if (!fileInput.files.length) return alert('Pilih file backup JSON terlebih dahulu!');
   const file = fileInput.files[0];
+  if (!file) return alert('Pilih file JSON dulu.');
   const reader = new FileReader();
   reader.onload = function(e) {
     try {
       const data = JSON.parse(e.target.result);
-      for (const key in data) {
+      Object.keys(data).forEach(key => {
         localStorage.setItem(key, data[key]);
-      }
-      alert('✅ Import berhasil! Silakan refresh halaman.');
+      });
+      alert('✅ Data berhasil diimport. Reload halaman untuk melihat hasil.');
+      location.reload();
     } catch (err) {
       alert('❌ File tidak valid: ' + err.message);
     }
   };
   reader.readAsText(file);
 }
-
-// Hapus semua data localStorage
 function resetLocalStorage() {
-  if (confirm('⚠️ Apakah kamu yakin ingin menghapus SEMUA data LocalStorage?')) {
+  if (confirm('Yakin ingin menghapus semua data localStorage?')) {
     localStorage.clear();
-    inputLinksEl.value = '';
-    outputEl.innerHTML = '';
-    statsEl.textContent = '';
-    paginationEl.innerHTML = '';
-    alert('🗑️ Semua data LocalStorage telah dihapus!');
+    alert('Semua data localStorage telah dihapus.');
+    location.reload();
   }
 }
 
-// Sinkronisasi semua file TXT secara massal (contoh simulasi)
-async function syncAllFiles() {
-  alert('🔄 Sinkronisasi file TXT dimulai...');
-  const files = ['jalb.txt', 'rano.txt', 'kakfitro.txt', 'rini.txt', 'nurbad.txt'];
-  for (const file of files) {
-    console.log(`Mengambil data dari ${file}...`);
-    // simulasi fetch
-    await new Promise(r => setTimeout(r, 500));
+/* === FUNGSI BARU: DOWNLOAD MASAL === */
+async function downloadTerbaruMasal() {
+  const options = Array.from(dropdownEl.options).filter(o => o.value);
+  if (!options.length) return alert('Tidak ada file di daftar.');
+
+  if (!confirm(`Ambil data terbaru dari ${options.length} file TXT?`)) return;
+
+  let hasilGabungan = [];
+  for (const opt of options) {
+    try {
+      const res = await fetch(opt.value + '?t=' + Date.now(), { cache: 'no-store' });
+      if (!res.ok) throw new Error('HTTP ' + res.status);
+      const text = await res.text();
+      hasilGabungan.push(...text.trim().split('\n'));
+      console.log(`✅ ${opt.value} berhasil diambil.`);
+    } catch (e) {
+      console.warn(`❌ Gagal ambil ${opt.value}:`, e);
+    }
   }
-  alert('✅ Sinkronisasi selesai untuk semua file!');
+
+  inputLinksEl.value = hasilGabungan.join('\n');
+  processLinks();
+  showPage(1);
+  alert('✅ Semua file berhasil diambil & ditampilkan.');
 }
 
-document.getElementById('syncAllBtn').addEventListener('click', syncAllFiles);
-document.getElementById('ambilFileListLinksBtn').addEventListener('click', syncAllFiles);
+/* === HUBUNGKAN TOMBOL === */
+document.getElementById('ambilFileListLinksBtn').addEventListener('click', downloadTerbaruMasal);
 </script>
-
 </body>
 </html>
