--- a/gabung/v3.html
+++ b/gabung/v3.html
@@ -11,33 +11,9 @@
   h2 { font-size:1.2rem; margin-bottom:10px; }
   textarea, select { width:100%; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; resize:vertical; }
   textarea { height:150px; }
-  #output { display:none; margin-top:10px; background:#fff; border-radius:8px; border:1px solid #ffd42a; padding:10px 15px; box-shadow:0 0 8px rgba(255,212,42,0.2);}
-  .link-item {
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    background:#fffbec;
-    padding:8px 10px;
-    border-bottom:1px dashed #ffd42a;
-    border-radius:5px;
-    margin-bottom:6px;
-  }
-  .link-item a.link {
-    color:#0066cc;
-    text-decoration:none;
-    word-break:break-all;
-    flex:1;
-  }
-  .link-item a.link:hover { text-decoration:underline; }
-  .link-item a.report {
-    color:#cc0000;
-    text-decoration:none;
-    font-weight:bold;
-    margin-left:10px;
-    white-space:nowrap;
-  }
-  .link-item a.report:hover { text-decoration:underline; }
-
+  #output { display:none; margin-top:10px; }
+  #output a { display:inline-block; margin-bottom:6px; color:#0066cc; text-decoration:none; word-wrap:break-word; }
+  #output a:hover { text-decoration:underline; }
   .pagination { margin-top:15px; text-align:center; display:flex; flex-wrap:wrap; gap:6px; justify-content:center; }
   .page-btn { padding:10px 14px; cursor:pointer; border:1px solid #ccc; border-radius:6px; background-color:white; font-size:1rem; min-width:40px; }
   .page-btn:hover { background-color:#ffd42a; color:#b36b00; }
@@ -69,7 +45,7 @@
 <body>
 
 <h1>Produk Live MadGazan 5 Oktober</h1>
-<h2>Manajemen Shopee Live v1</h2>
+<h2>Manajemen Shopee Live v1 awal stabil</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
 
@@ -223,23 +199,21 @@ function renderStats(total, uniq, dup) {
     `Total link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
 }
 
-/* === ✅ TAMPILAN DIBUAT CANTIK DENGAN LAYOUT BARU === */
+/* === ✅ BAGIAN YANG DITAMBAHKAN: tombol Lapor di setiap link === */
 function showPage(page) {
   if (!allPages.length) { outputEl.style.display = 'none'; return; }
   currentPage = page;
   const fileNow = dropdownEl.value || 'default.txt';
   outputEl.innerHTML = allPages[page - 1].map(l => {
     const reportUrl = `https://niddumulu.github.io/shope-tools/lapor/index.html?link=${encodeURIComponent(l)}&file=${encodeURIComponent(fileNow)}`;
-    return `<div class="link-item">
-              <a class="link" href="${l}" target="_blank">${l}</a>
-              <a class="report" href="${reportUrl}" target="_blank">Laporkan</a>
-            </div>`;
+    return `<div><a href="${l}" target="_blank">${l}</a> 
+            <a href="${reportUrl}" target="_blank" style="color:red; margin-left:6px;">| Laporkan</a></div>`;
   }).join('');
   outputEl.style.display = 'block';
   highlightActivePage();
   saveAppData();
 }
-/* === ✅ END TAMPILAN BARU === */
+/* === ✅ END TAMBAHAN === */
 
 function renderPagination() {
   paginationEl.innerHTML = '';
@@ -306,7 +280,7 @@ function resetLocalStorage() {
   }
 }
 
-  /* === FUNGSI SINKRON SEMUA FILE === */
+/* === FUNGSI SINKRON SEMUA FILE === */
 async function syncAllFiles() {
   const options = Array.from(dropdownEl.options).filter(o => o.value);
   if (!options.length) return alert('Tidak ada file di dropdown.');
@@ -347,7 +321,6 @@ async function syncAllFiles() {
 /* === Hubungkan tombol === */
 document.getElementById('syncAllBtn').addEventListener('click', syncAllFiles);
 document.getElementById('ambilFileListLinksBtn').addEventListener('click', syncAllFiles);
-
 </script>
 </body>
 </html>
