--- a/lapor/v3.html
+++ b/lapor/v3.html
@@ -125,6 +125,7 @@
       <label><input type="checkbox" class="tag" value="#kalahnggamblik"> #kalahnggamblik</label>
       <label><input type="checkbox" class="tag" value="#kalahvideo"> #kalahvideo</label>
       <label><input type="checkbox" class="tag" value="#nopopup"> #nopopup</label>
+      <label><input type="checkbox" class="tag" value="#habis"> #habis</label>
     </div>
 
     <button onclick="kirimPesan()">Kirim Sekarang</button>
