--- a/lapor/v3.html
+++ b/lapor/v3.html
@@ -113,7 +113,7 @@
 <body>
   <div class="card">
     <div class="header-icon">📢</div>
-    <h2>Laporan Kendala</h2>
+    <h2>Laporan Kendala(dari index awal fix)</h2>
     <p class="subtitle">Laporkan kendala produk atau link Shopee ditambah keterangan juga boleh.</p>
 
     <textarea id="pesan" placeholder="Tulis pesanmu di sini..."></textarea>
