--- a/tampilkan.html
+++ b/tampilkan.html
@@ -1,99 +1,165 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Tampilkan data.txt & Copy</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>📚 Daftar Isi - Shope Tools</title>
   <style>
-    body{font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial;max-width:900px;margin:28px auto;padding:0 16px;color:#111}
-    header{display:flex;align-items:center;justify-content:space-between;gap:12px}
-    h1{font-size:1.15rem;margin:0}
-    .controls{display:flex;gap:8px}
-    button{padding:8px 12px;border-radius:8px;border:1px solid #ccc;background:#f7f7f7;cursor:pointer}
-    button:active{transform:translateY(1px)}
-    pre#content{white-space:pre-wrap;background:#0f172a;color:#e6eef8;padding:16px;border-radius:8px;overflow:auto;max-height:60vh}
-    .meta{color:#555;font-size:0.9rem;margin-top:8px}
-    input[type=file]{display:none}
-    .notice{margin-top:12px;color:#444}
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9fafb;
+      color: #333;
+    }
+
+    header {
+      background: linear-gradient(90deg, #ff6600, #ff9f43);
+      color: white;
+      text-align: center;
+      padding: 20px 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      margin: 0;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 30px auto;
+      background: white;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+    }
+
+    h2 {
+      border-left: 5px solid #ff6600;
+      padding-left: 10px;
+      font-size: 1.2rem;
+      color: #444;
+      margin-top: 30px;
+    }
+
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    li {
+      margin: 10px 0;
+      background: #fff7f0;
+      border-radius: 10px;
+      padding: 10px 15px;
+      transition: all 0.2s ease;
+      border: 1px solid #ffe1c6;
+    }
+
+    li:hover {
+      background: #fff0e0;
+      transform: translateY(-2px);
+    }
+
+    a {
+      text-decoration: none;
+      color: #ff6600;
+      font-weight: 600;
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px;
+      font-size: 0.9rem;
+      color: #666;
+    }
+
+    @media (max-width: 600px) {
+      .container { margin: 15px; padding: 20px; }
+      h1 { font-size: 1.5rem; }
+    }
+
+    .search-box {
+      margin-bottom: 20px;
+      display: flex;
+      justify-content: center;
+    }
+
+    .search-box input {
+      width: 100%;
+      max-width: 400px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      font-size: 1rem;
+      outline: none;
+      transition: 0.2s;
+    }
+
+    .search-box input:focus {
+      border-color: #ff6600;
+      box-shadow: 0 0 3px #ffb266;
+    }
   </style>
 </head>
 <body>
+
   <header>
-    <h1>Tampilkan <code>data.txt</code> dan tombol Copy</h1>
-    <div class="controls">
-      <button id="refreshBtn" title="Muat ulang dari data.txt">Refresh</button>
-      <button id="copyBtn" title="Salin isi ke clipboard">Copy</button>
-      <label for="fileInput" style="margin:0"><button id="chooseBtn">Pilih file (lokal)</button></label>
-      <input id="fileInput" type="file" accept=".txt" />
-    </div>
+    <h1>📚 Daftar Isi Proyek Shope Tools</h1>
+    <p>Temukan semua halaman dan fitur dari proyek ini dengan mudah</p>
   </header>
 
-  <main>
-    <p class="notice">Catatan: agar fungsi "Refresh" (fetch) bekerja, jalankan file ini melalui server (mis. <code>python -m http.server</code>) dan letakkan <code>data.txt</code> di folder yang sama. Jika tidak ingin menjalankan server, gunakan tombol "Pilih file (lokal)".</p>
+  <div class="container">
+    <div class="search-box">
+      <input type="text" id="searchInput" placeholder="Cari halaman...">
+    </div>
 
-    <pre id="content">Memuat...</pre>
-    <p class="meta" id="meta">—</p>
-  </main>
+    <h2>🔧 Tools Utama</h2>
+    <ul id="daftarIsi">
+      <!-- Link akan dimasukkan otomatis lewat JS -->
+    </ul>
+  </div>
+
+  <footer>
+    Dibuat dengan ❤️ oleh M Hasan Ulumuddin<br>
+    <small>&copy; 2025 Shope Tools Project</small>
+  </footer>
 
   <script>
-    const contentEl = document.getElementById('content');
-    const metaEl = document.getElementById('meta');
-    const copyBtn = document.getElementById('copyBtn');
-    const refreshBtn = document.getElementById('refreshBtn');
-    const fileInput = document.getElementById('fileInput');
+    // Daftar file HTML di proyek
+    const links = [
+      { name: "Produk Laku di Live MadGazan", file: "produk_laku_madgazan.html" },
+      { name: "Sortir Toko (Produk Live MadGazan)", file: "sortir_toko.html" },
+      { name: "Kirim Pesan ke Channel Telegram", file: "kirim_telegram.html" },
+      { name: "Baca CSV Shopee Tools", file: "baca_csv.html" },
+      { name: "Total Komisi per Pesanan", file: "total_komisi.html" },
+      { name: "Ambil Data Toko", file: "ambil_toko.html" },
+      { name: "Produk Live MadGazan v3", file: "produk_live_madgazan_v3.html" }
+    ];
 
-    async function loadFromServer() {
-      try {
-        const resp = await fetch('data.txt', {cache: 'no-store'});
-        if (!resp.ok) throw new Error('Tidak dapat memuat: ' + resp.status+ ' ' + resp.statusText);
-        const txt = await resp.text();
-        showContent(txt, 'Sumber: data.txt (server)');
-      } catch (err) {
-        showContent('Gagal memuat data.txt dari server.\nGunakan tombol "Pilih file (lokal)" atau jalankan server HTTP.\n\nError: '+err.message, 'Kesalahan');
-      }
-    }
+    const ul = document.getElementById("daftarIsi");
+    const baseURL = "https://niddumulu.github.io/shope-tools/";
 
-    function showContent(text, sourceNote) {
-      contentEl.textContent = text || 'file kosong';
-      const lines = text ? text.split(/\r?\n/).length : 0;
-      const chars = text ? text.length : 0;
-      metaEl.textContent = `${sourceNote} — ${lines} baris, ${chars} karakter`;
-    }
-
-    copyBtn.addEventListener('click', async () => {
-      // gunakan innerText agar newline tetap terjaga
-      const text = contentEl.innerText || '';
-      try {
-        await navigator.clipboard.writeText(text);
-        copyBtn.textContent = 'Tersalin!';
-        setTimeout(()=> copyBtn.textContent = 'Copy', 1200);
-      } catch (e) {
-        // fallback
-        const ta = document.createElement('textarea');
-        ta.value = text;
-        document.body.appendChild(ta);
-        ta.select();
-        try { document.execCommand('copy'); copyBtn.textContent = 'Tersalin!'; }
-        catch(err){ alert('Maaf, tidak bisa menyalin otomatis. Silakan salin manual.'); }
-        ta.remove();
-        setTimeout(()=> copyBtn.textContent = 'Copy', 1200);
-      }
+    links.forEach(link => {
+      const li = document.createElement("li");
+      const a = document.createElement("a");
+      a.href = baseURL + link.file;
+      a.textContent = link.name;
+      a.target = "_blank";
+      li.appendChild(a);
+      ul.appendChild(li);
     });
 
-    refreshBtn.addEventListener('click', loadFromServer);
-
-    // file chooser (bisa dipakai jika tidak menjalankan server)
-    fileInput.addEventListener('change', (e) => {
-      const f = e.target.files && e.target.files[0];
-      if (!f) return;
-      const reader = new FileReader();
-      reader.onload = () => showContent(reader.result, `Sumber: ${f.name} (lokal)`);
-      reader.onerror = () => showContent('Gagal membaca file lokal', 'Kesalahan');
-      reader.readAsText(f, 'utf-8');
+    // Fitur pencarian sederhana
+    document.getElementById("searchInput").addEventListener("input", function () {
+      const keyword = this.value.toLowerCase();
+      document.querySelectorAll("#daftarIsi li").forEach(li => {
+        li.style.display = li.textContent.toLowerCase().includes(keyword) ? "" : "none";
+      });
     });
-
-    // coba langsung muat dari server saat halaman dibuka
-    loadFromServer();
   </script>
+
 </body>
 </html>
