--- a/tampilkan.html
+++ b/tampilkan.html
@@ -130,13 +130,13 @@
   <script>
     // Daftar file HTML di proyek
     const links = [
-      { name: "Produk Laku di Live MadGazan", file: "produk_laku_madgazan.html" },
-      { name: "Sortir Toko (Produk Live MadGazan)", file: "sortir_toko.html" },
-      { name: "Kirim Pesan ke Channel Telegram", file: "kirim_telegram.html" },
-      { name: "Baca CSV Shopee Tools", file: "baca_csv.html" },
-      { name: "Total Komisi per Pesanan", file: "total_komisi.html" },
-      { name: "Ambil Data Toko", file: "ambil_toko.html" },
-      { name: "Produk Live MadGazan v3", file: "produk_live_madgazan_v3.html" }
+      { name: "Produk Laku di Live MadGazan", file: "laku/index.html" },
+      { name: "Sortir Toko (Produk Live MadGazan)", file: "sortir/index.html" },
+      { name: "Laporan Kendala", file: "lapor/index.html" },
+      { name: "Ambil URL Affiliate", file: "read/geturl.html" },
+      { name: "Total Komisi Affiliate", file: "read/totalkomisi.html" },
+      { name: "Oktober", file: "oktober/index.html" },
+      { name: "Oktober1", file: "oktober1/index.html" }
     ];
 
     const ul = document.getElementById("daftarIsi");
