--- a/tampilkan.html
+++ b/tampilkan.html
@@ -130,7 +130,7 @@
   <script>
     // Daftar file HTML di proyek
     const links = [
-      { name: "Produk Laku di Live MadGazan", file: "laku/index.html" },
+      { name: "Produk Run Saat Ini", file: "gabung/index.html" },
       { name: "Sortir Toko (Produk Live MadGazan)", file: "sortir/index.html" },
       { name: "Laporan Kendala", file: "lapor/index.html" },
       { name: "Ambil URL Affiliate", file: "read/geturl.html" },
