--- a/gabung/index.html
+++ b/gabung/index.html
@@ -68,8 +68,8 @@
 </head>
 <body>
 
-<h1>Produk Live MadGazan 5 Oktober</h1>
-<h2>Manajemen Shopee Live v1</h2>
+<h1>Produk Live MadGazan 6 November 2025</h1>
+<h2>Manajemen Shopee Live</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
 
