--- a/sortir/index.html
+++ b/sortir/index.html
@@ -1,278 +1,111 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Link Shopee Sortir Toko</title>
+<title>Sortir Link Shopee Berdasarkan ID Toko</title>
 <style>
-  body { font-family: Arial, sans-serif; margin: 15px; max-width: 700px; margin-left:auto; margin-right:auto; }
-  h2,h3 { font-size: 1.2rem; margin-bottom: 8px; }
-  textarea { width:100%; height:150px; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; }
-  #output { margin-top:10px; }
-  #output a { display:block; margin-bottom:6px; color:#0066cc; text-decoration:none; word-wrap:break-word; }
-  #output a:hover { text-decoration:underline; }
-  .pagination { margin-top:15px; text-align:center; display:flex; flex-wrap:wrap; gap:6px; justify-content:center; }
-  .page-btn { padding:10px 14px; cursor:pointer; border:1px solid #ccc; border-radius:6px; background-color:white; font-size:1rem; min-width:40px; }
-  .page-btn:hover { background-color:#ffd42a; color:#b36b00; }
-  .active { font-weight:bold; background-color:#ffd42a; color:#b36b00; border-color:#b36b00; }
-  #copyBtn { margin-top:12px; padding:12px; font-size:1rem; cursor:pointer; border:none; background-color:#ffd42a; color:#b36b00; border-radius:6px; width:100%; }
-  #copyBtn:hover { background-color:#e6c72b; }
-  .input-buttons { display:flex; gap:8px; margin-top:6px; flex-wrap:wrap; }
-  .input-buttons button { flex:1; padding:10px; font-size:0.95rem; cursor:pointer; border:1px solid #ccc; border-radius:6px; background:#f5f5f5; }
-  .input-buttons button:hover { background:#eee; }
-  #stats { margin:15px 0; font-weight:bold; font-size:1rem; white-space:pre-line; }
-  .sponsor { background-color:#fffae6; border:1px solid #ffd42a; padding:12px; margin:15px 0; font-weight:bold; text-align:center; color:#b36b00; border-radius:6px; box-shadow:0 0 5px rgba(255,212,42,0.5); font-size:1rem; }
-  #tokoContainer { margin-top:10px; }
-  #toggleOutputBtn { width:100%;padding:10px;margin-top:10px;margin-bottom:10px;border:none;border-radius:6px;background:#ffd42a;color:#b36b00;cursor:pointer;font-weight:bold; }
-  #toggleOutputBtn:hover { background:#e6c72b; }
-  @media (max-width:480px){
-    h2,h3{ font-size:1rem; }
-    textarea{ height:120px; font-size:0.9rem; }
-    #output{ font-size:0.85rem; }
-    .page-btn{ padding:8px 12px; font-size:0.9rem; }
-    #copyBtn{ font-size:0.95rem; }
-    .input-buttons{ flex-direction:column; }
-    .input-buttons button{ flex:unset; width:100%; }
-  }
+  body { font-family: Arial, sans-serif; margin: 20px; max-width: 700px; margin-inline:auto; }
+  h2 { text-align:center; color:#b36b00; }
+  textarea { width:100%; height:150px; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; box-sizing:border-box; }
+  .hasil-box { margin-top:15px; padding:10px; border-radius:6px; background:#fffef5; border:1px solid #ffd42a; }
+  button { padding:8px 12px; margin-top:8px; border:none; border-radius:6px; cursor:pointer; background:#ffd42a; color:#b36b00; font-weight:bold; }
+  button:hover { background:#f0c000; }
+  a { display:block; margin:4px 0; text-decoration:none; color:#0066cc; word-break:break-all; }
+  a:hover { text-decoration:underline; }
+  .stat { margin-top:10px; background:#fff9da; border:1px solid #ffd42a; padding:10px; border-radius:6px; white-space:pre-line; }
+  h3 { margin-bottom:6px; }
 </style>
 </head>
 <body>
-<h2>Masukkan Link Shopee</h2>
-<textarea id="inputLinks" placeholder="Masukkan ribuan link Shopee, satu per baris..."></textarea>
-<div class="input-buttons">
-  
-  <button id="clearInputLinksBtn">Clear Input Links</button>
-  <button id="copyInputLinksBtn">Copy Input Links</button>
+
+<h2>Sortir Link Shopee Berdasarkan ID Toko</h2>
+
+<h3>Masukkan Semua Link Shopee:</h3>
+<textarea id="inputLinks" placeholder="Tempel semua link Shopee di sini, satu per baris..."></textarea>
+
+<h3>Masukkan ID Toko (pisahkan dengan baris baru):</h3>
+<textarea id="inputToko" placeholder="Contoh: 417403240&#10;123456789"></textarea>
+
+<div id="catatan" class="stat"></div>
+
+<div class="hasil-box">
+  <h3>✅ Hasil Tersortir (Cocok dengan ID Toko)</h3>
+  <button id="copySorted">Copy Hasil Tersortir</button>
+  <div id="hasilSorted"></div>
 </div>
 
-<div class="sponsor">Disponsori oleh <strong>Kios Tembakau MadGazan</strong></div>
-
-<!-- Tombol untuk tampil/sembunyi toko -->
-<button id="toggleTokoBtn" style="width:100%;padding:10px;margin-bottom:10px;border:none;border-radius:6px;background:#ffd42a;color:#b36b00;cursor:pointer;font-weight:bold;">
-  🔽 Sembunyikan ID Toko
-</button>
-
-<!-- Container toko -->
-<div id="tokoContainer">
-  <h3>Masukkan ID Toko yang Dikecualikan (satu per baris)</h3>
-  <textarea id="excludedShops" placeholder="Contoh: 123456789&#10;987654321"></textarea>
-  <div class="input-buttons">
-    
-    <button id="clearInputTokoBtn">Clear Input Toko</button>
-    <button id="copyInputTokoBtn">Copy Input Toko</button>
-  </div>
+<div class="hasil-box">
+  <h3>🚫 Hasil Tidak Tersortir (Tidak Cocok)</h3>
+  <button id="copyUnsorted">Copy Hasil Tidak Tersortir</button>
+  <div id="hasilUnsorted"></div>
 </div>
-
-<div id="stats"></div>
-
-<h3>Output (maks 100 per halaman)</h3>
-
-<!-- Tombol tampil/sembunyi output -->
-<button id="toggleOutputBtn">🔽 Sembunyikan Output Link</button>
-<div id="output"></div>
-<button id="copyBtn" onclick="copyToClipboard()">Copy Link di Halaman Ini</button>
-<div class="pagination" id="pagination"></div>
 
 <script>
-let allLinks = [], currentPage = 1, maxPerPage = 100;
-const inputLinksEl = document.getElementById('inputLinks');
-const excludedShopsEl = document.getElementById('excludedShops');
-const tokoContainer = document.getElementById('tokoContainer');
-const toggleTokoBtn = document.getElementById('toggleTokoBtn');
-const toggleOutputBtn = document.getElementById('toggleOutputBtn');
-const outputDiv = document.getElementById('output');
+const inputLinks = document.getElementById("inputLinks");
+const inputToko = document.getElementById("inputToko");
+const hasilSorted = document.getElementById("hasilSorted");
+const hasilUnsorted = document.getElementById("hasilUnsorted");
+const catatan = document.getElementById("catatan");
 
-/* === Bikin kunci LocalStorage unik per file dan per sesi === */
-const baseKey = location.pathname.split('/').pop().replace(/\.[^/.]+$/, '') || 'shopee_page';
-const uniqueId = (() => {
-  const existing = localStorage.getItem(`${baseKey}_uniqueId`);
-  if (existing) return existing;
-  const newId = `${baseKey}_${Date.now()}_${Math.floor(Math.random() * 100000)}`;
-  localStorage.setItem(`${baseKey}_uniqueId`, newId);
-  return newId;
-})();
-const pageKey = uniqueId; // semua kunci data sekarang memakai ID unik
+function prosesSortir() {
+  const linkLines = inputLinks.value.split("\n").map(x => x.trim()).filter(Boolean);
+  const tokoLines = inputToko.value.split("\n").map(x => x.trim()).filter(Boolean);
 
-// === Tombol tampil/sembunyi toko ===
-toggleTokoBtn.addEventListener('click', () => {
-  const isHidden = tokoContainer.style.display === 'none';
-  if (isHidden) {
-    tokoContainer.style.display = 'block';
-    toggleTokoBtn.innerHTML = '🔽 Sembunyikan ID Toko';
-    localStorage.setItem(`${pageKey}_showToko`, 'true');
-  } else {
-    tokoContainer.style.display = 'none';
-    toggleTokoBtn.innerHTML = '▶️ Tampilkan ID Toko';
-    localStorage.setItem(`${pageKey}_showToko`, 'false');
+  if (linkLines.length === 0) {
+    hasilSorted.innerHTML = "";
+    hasilUnsorted.innerHTML = "";
+    catatan.innerText = "Masukkan link Shopee terlebih dahulu.";
+    return;
   }
-});
 
-// === Tombol tampil/sembunyi output ===
-toggleOutputBtn.addEventListener('click', () => {
-  const isHidden = outputDiv.style.display === 'none';
-  if (isHidden) {
-    outputDiv.style.display = 'block';
-    toggleOutputBtn.innerHTML = '🔽 Sembunyikan Output Link';
-    localStorage.setItem(`${pageKey}_showOutput`, 'true');
-  } else {
-    outputDiv.style.display = 'none';
-    toggleOutputBtn.innerHTML = '▶️ Tampilkan Output Link';
-    localStorage.setItem(`${pageKey}_showOutput`, 'false');
+  if (tokoLines.length === 0) {
+    hasilSorted.innerHTML = "<em>Masukkan ID toko untuk mulai sortir.</em>";
+    hasilUnsorted.innerHTML = "";
+    catatan.innerText = `Total link diinput: ${linkLines.length}`;
+    return;
   }
-});
 
-// === Saat halaman dimuat ===
-window.onload = () => {
-  if (localStorage.getItem(`${pageKey}_inputLinks`))
-    inputLinksEl.value = localStorage.getItem(`${pageKey}_inputLinks`);
-  if (localStorage.getItem(`${pageKey}_excludedShops`))
-    excludedShopsEl.value = localStorage.getItem(`${pageKey}_excludedShops`);
-  currentPage = parseInt(localStorage.getItem(`${pageKey}_lastPage`)) || 1;
+  let cocok = [], tidakCocok = [], semuaToko = new Set();
 
-  // Pulihkan status tampil/sembunyi
-  const showToko = localStorage.getItem(`${pageKey}_showToko`);
-  tokoContainer.style.display = showToko === 'false' ? 'none' : 'block';
-  toggleTokoBtn.innerHTML = showToko === 'false'
-    ? '▶️ Tampilkan ID Toko'
-    : '🔽 Sembunyikan ID Toko';
-
-  const showOutput = localStorage.getItem(`${pageKey}_showOutput`);
-  outputDiv.style.display = showOutput === 'false' ? 'none' : 'block';
-  toggleOutputBtn.innerHTML = showOutput === 'false'
-    ? '▶️ Tampilkan Output Link'
-    : '🔽 Sembunyikan Output Link';
-
-  processLinks();
-};
-
-// === Ambil satu.txt ===
-document.getElementById('ambilLinksBtn').addEventListener('click', async () => {
-  try {
-    const res = await fetch('satu.txt?t=' + Date.now(), { cache: 'no-store' });
-    if (!res.ok) throw new Error('HTTP ' + res.status);
-    const text = await res.text();
-    const rows = text.split(/\r?\n/).map(r => r.trim()).filter(Boolean);
-    inputLinksEl.value = rows.join("\n");
-    localStorage.setItem(`${pageKey}_inputLinks`, inputLinksEl.value);
-    processLinks();
-  } catch (e) { alert("Gagal mengambil satu.txt: " + e.message); }
-});
-
-// === Ambil data_toko.txt ===
-document.getElementById('ambilTokoBtn').addEventListener('click', async () => {
-  try {
-    const res = await fetch('data_toko.txt?t=' + Date.now(), { cache: 'no-store' });
-    if (!res.ok) throw new Error('HTTP ' + res.status);
-    const text = await res.text();
-    const rows = text.split(/\r?\n/).map(r => r.trim()).filter(Boolean);
-    excludedShopsEl.value = rows.join("\n");
-    localStorage.setItem(`${pageKey}_excludedShops`, excludedShopsEl.value);
-    processLinks();
-  } catch (e) { alert("Gagal mengambil data_toko.txt: " + e.message); }
-});
-
-// === Clear/copy input ===
-document.getElementById('clearInputLinksBtn').addEventListener('click', () => {
-  inputLinksEl.value = '';
-  localStorage.removeItem(`${pageKey}_inputLinks`);
-  processLinks();
-});
-document.getElementById('copyInputLinksBtn').addEventListener('click', () => {
-  const text = inputLinksEl.value.trim();
-  if (!text) return alert("Input kosong!");
-  navigator.clipboard.writeText(text).then(() => alert("Isi input disalin!"));
-});
-
-document.getElementById('clearInputTokoBtn').addEventListener('click', () => {
-  excludedShopsEl.value = '';
-  localStorage.removeItem(`${pageKey}_excludedShops`);
-  processLinks();
-});
-document.getElementById('copyInputTokoBtn').addEventListener('click', () => {
-  const text = excludedShopsEl.value.trim();
-  if (!text) return alert("Input kosong!");
-  navigator.clipboard.writeText(text).then(() => alert("Isi input disalin!"));
-});
-
-// === Simpan input saat diketik ===
-inputLinksEl.addEventListener('input', () => {
-  localStorage.setItem(`${pageKey}_inputLinks`, inputLinksEl.value);
-  processLinks();
-});
-excludedShopsEl.addEventListener('input', () => {
-  localStorage.setItem(`${pageKey}_excludedShops`, excludedShopsEl.value);
-  processLinks();
-});
-
-// === Fungsi utama ===
-function processLinks() {
-  const rawLines = inputLinksEl.value.split('\n').map(l => l.trim());
-  const excludedShopIds = excludedShopsEl.value.split('\n').map(id => id.trim()).filter(Boolean);
-  let pages = [], currentLinks = [];
-
-  for (let line of rawLines) {
-    if (line === '' || line === '###') {
-      if (currentLinks.length) { pages.push(currentLinks); currentLinks = []; }
-    } else if (/\/product\/\d+\/\d+/.test(line)) {
-      const match = line.match(/\/product\/(\d+)\/\d+/);
-      const shopId = match[1];
-      if (!excludedShopIds.includes(shopId)) currentLinks.push(line);
-      if (currentLinks.length >= maxPerPage) { pages.push(currentLinks); currentLinks = []; }
+  linkLines.forEach(link => {
+    const match = link.match(/\/product\/(\d+)\/(\d+)/);
+    if (match) {
+      const idToko = match[1];
+      semuaToko.add(idToko);
+      if (tokoLines.includes(idToko)) cocok.push(link);
+      else tidakCocok.push(link);
     }
-  }
-  if (currentLinks.length) pages.push(currentLinks);
-  allLinks = pages;
-
-  const savedPage = parseInt(localStorage.getItem(`${pageKey}_lastPage`)) || 1;
-  currentPage = Math.min(savedPage, allLinks.length) || 1;
-
-  showPage(currentPage);
-  renderPagination();
-
-  const totalLinks = rawLines.filter(l => l && l !== '###').length;
-  document.getElementById('stats').textContent =
-    `Total link diinput: ${totalLinks}\nTotal halaman: ${allLinks.length}`;
-  outputDiv.style.display = allLinks.length ? 'block' : 'none';
-}
-
-function showPage(page) {
-  if (page < 1 || page > allLinks.length) return;
-  const pageLinks = allLinks[page - 1];
-  outputDiv.innerHTML = pageLinks.map(l =>
-    `<a href="${l}" target="_blank" rel="noopener noreferrer">${l}</a>`
-  ).join('');
-  currentPage = page;
-  localStorage.setItem(`${pageKey}_lastPage`, page);
-  highlightActivePage();
-}
-
-function copyToClipboard() {
-  if (!allLinks.length) return;
-  const text = allLinks[currentPage - 1].join('\n');
-  navigator.clipboard.writeText(text)
-    .then(() => alert(`Link di halaman ${currentPage} berhasil disalin!`))
-    .catch(() => alert('Gagal menyalin!'));
-}
-
-function renderPagination() {
-  const pagination = document.getElementById('pagination');
-  pagination.innerHTML = '';
-  for (let i = 1; i <= allLinks.length; i++) {
-    const btn = document.createElement('button');
-    btn.textContent = i;
-    btn.className = 'page-btn';
-    if (i === currentPage) btn.classList.add('active');
-    btn.addEventListener('click', () => showPage(i));
-    pagination.appendChild(btn);
-  }
-}
-
-function highlightActivePage() {
-  document.querySelectorAll('.page-btn').forEach(btn => {
-    btn.classList.remove('active');
-    if (parseInt(btn.textContent) === currentPage) btn.classList.add('active');
   });
+
+  hasilSorted.innerHTML = cocok.length
+    ? cocok.map(l => `<a href="${l}" target="_blank">${l}</a>`).join("")
+    : "<em>Tidak ada link yang cocok.</em>";
+
+  hasilUnsorted.innerHTML = tidakCocok.length
+    ? tidakCocok.map(l => `<a href="${l}" target="_blank">${l}</a>`).join("")
+    : "<em>Semua link cocok dengan ID toko.</em>";
+
+  catatan.innerText =
+    `Total link diinput: ${linkLines.length}\n` +
+    `Total produk cocok: ${cocok.length}\n` +
+    `Total produk tidak cocok: ${tidakCocok.length}\n` +
+    `Total ID toko unik terdeteksi: ${semuaToko.size}`;
 }
+
+function copyTextFrom(divId) {
+  const links = Array.from(document.querySelectorAll(`#${divId} a`)).map(a => a.href);
+  if (links.length === 0) return alert("Tidak ada link untuk disalin.");
+  navigator.clipboard.writeText(links.join("\n"))
+    .then(() => alert(`Berhasil menyalin ${links.length} link dari ${divId}!`));
+}
+
+document.getElementById("copySorted").addEventListener("click", () => copyTextFrom("hasilSorted"));
+document.getElementById("copyUnsorted").addEventListener("click", () => copyTextFrom("hasilUnsorted"));
+
+inputLinks.addEventListener("input", prosesSortir);
+inputToko.addEventListener("input", prosesSortir);
 </script>
+
 </body>
 </html>
